Update 'backend-tests-python-entnlhlz' component image to: quay.io/rhtap_qe/backend-tests-python-entnlhlz:0d02add4190e26dc23e183394f00c6f9d0b6dd0d@sha256:3896fc55a25972d236e87f513a677bcb28f8666127071ad44ce73b4c9a733efd

--- a/components/backend-tests-python-entnlhlz/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-python-entnlhlz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-python-entnlhlz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-python-entnlhlz:0d02add4190e26dc23e183394f00c6f9d0b6dd0d@sha256:3896fc55a25972d236e87f513a677bcb28f8666127071ad44ce73b4c9a733efd
+          name: container-image
